--- a/custom/themes/ingenuity/src/sass/style.scss
+++ b/custom/themes/ingenuity/src/sass/style.scss
@@ -20,6 +20,7 @@
 @import "components/gallery";
 @import "components/pushpanel";
 @import "components/animate";
+@import "components/hint";
 
 
 @import "layout/footer";
