--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -175,11 +175,13 @@ span.black-highlight {
 		font-weight: 300;
 		font-size: modular-scale(2, 1rem);
 		line-height:modular-scale(2, 1rem);
-		// text-transform: none;
-
 		letter-spacing: 1px;
 		text-align: left;
 		margin: 0 20% 0 10%;
+		@include media($bp-small) {
+			font-size: modular-scale(1, 1rem);
+			line-height:modular-scale(1, 1rem);
+	    }
 	}
 }
 
