--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -18,7 +18,6 @@ h1 {
 	font-weight: 800;
 	font-size: modular-scale(3, 1rem); //32px
 	line-height: modular-scale(3, 1rem);
-	// margin-bottom: 25px;
 	margin-bottom: 20px;
 	margin-top: 20px;
 	@include media($bp-large) {
@@ -244,6 +243,10 @@ main {
 	p {
 		margin-bottom: 20px;
 		@include media($bp-small) {
+		    font-size: modular-scale(0, 1.5rem);
+		    line-height: modular-scale(1, 1.5rem);
+		}
+		@include media($bp-med) {
 		    font-size: modular-scale(0, 1.5rem);
 		    line-height: modular-scale(1, 1.5rem);
 		}
@@ -484,6 +487,7 @@ span.bolded-text {
 #left p {
 	line-height: modular-scale(0,1.2rem);
 	margin-bottom: 10px;
+	font-weight: 200;
 }
 
 
