--- a/custom/themes/ingenuity/src/sass/layout/_projects.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_projects.scss
@@ -25,6 +25,12 @@
 	@include media($bp-small) {
 	    height: 150px;
 	}
+	@include media($bp-med) {
+	    height: 200px;
+	}
+	@include media($bp-large) {
+	    height: 300px;
+	}
 	h2 {
 		position: absolute;
 		top: 30%;
@@ -36,6 +42,11 @@
 		// padding-top: 100px;
 		@include media($bp-small) {
 		    top: 50%;
+		}
+		@include media($bp-med) {
+		    font-size: modular-scale(3); 
+			line-height: modular-scale(3); 
+			top: 35%;
 		}
 		@include media($bp-large) {
 		    font-size: modular-scale(5); 
