--- a/custom/themes/ingenuity/src/sass/layout/_team.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_team.scss
@@ -83,14 +83,40 @@
 	background: $black;
 	width: 100%;
 	color: $white;
+	position: relative;
 	button {
 		color: $black;
 		background-color: $yellow;
 		border: none;
 		padding: 10px 15px;
-		transition: all 0.5s;
+		// transition: all 0.5s;
+		margin-top: 25px;
 		&:hover {
-			background-color: darken($yellow, 10%); 
+			background-color: darken($yellow, 20%); 
+		}
+	}
+}
+
+button.drop-down-cross {
+	width: 80px;
+	height: 80px;
+	position: absolute;
+	background-color: $black;
+	right: 50px;
+	top: 20px;
+	overflow: hidden;
+	border: none;
+	background: url(../ingenuity/dist/images/cross.png) no-repeat center center;
+	text-indent: 200%;
+	color: transparent;
+	outline: none;
+}
+
+.push__longbio {
+	ul {
+		margin-top: -20px;
+		li {
+			padding-bottom: 10px;
 		}
 	}
 }
