--- a/custom/themes/ingenuity/src/sass/layout/_blog.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_blog.scss
@@ -1,5 +1,6 @@
 .blog-wrapper,
-.main-content {
+.main-content,
+.diagonal-wrapper {
 	position: relative;
 	.diagonal-line {
 		position: absolute;
